--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "kaydet-backend"
 version = "0.1.0"
-description = "Kaydet.link backend (Django)"
+description = "PackedLink backend (Django)"
 requires-python = ">=3.10"
 dependencies = [
     "Django>=5.0,<6.0",
