--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -17,8 +17,12 @@
     "@tanstack/react-query": "^5.59.1",
     "clsx": "^2.1.1",
     "next": "14.2.10",
+    "prismjs": "^1.30.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-markdown": "^10.1.0",
+    "rehype-prism-plus": "^2.0.1",
+    "remark-gfm": "^4.0.1",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
@@ -29,6 +33,7 @@
     "@vitest/coverage-v8": "^4.0.10",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.10",
+    "eslint-plugin-storybook": "^10.0.8",
     "playwright": "^1.56.1",
     "typescript": "5.6.3",
     "vitest": "^4.0.10"
